change to .css - fix series-box width so that if category-icon is set to a bigger width the box will automatically expand.  Tested on Firefox 2.0+ and IE6.0.
git-svn-id: http://plugins.svn.wordpress.org/organize-series/trunk@7494 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/orgSeries/orgSeries.css
+++ b/orgSeries/orgSeries.css
@@ -54,7 +54,7 @@ li.catlist-li {
 	padding: 6px 6px 12px 6px;
 	border: 1px dotted #1E3A96;
 	border-bottom: 2px solid #1E3A96;
-	width: 125px;
+	min-width: 125px;
 }
 
 .seriesbox img {
